Compatibility in github

--- a/Tab.html
+++ b/Tab.html
@@ -1,5 +1,5 @@
 <html>
-<head><link rel="stylesheet" type="text/css" href="styles/tab_styles.css"></head>
+<head><link rel="stylesheet" type="text/css" href="tab_styles.css"></head>
 <ul class="nav">
 <li><a href="Classmate/Null.html"  target="Base">Aldwin</a></li>
 <li><a href="Classmate/Null.html"  target="Base">Allaine</a></li>
