--- a/Tab.html
+++ b/Tab.html
@@ -1,25 +1,25 @@
 <html>
 <head><link rel="stylesheet" type="text/css" href="tab_styles.css"></head>
 <ul class="nav">
-<li><a href="Classmate/Null.html"  target="Base">Aldwin</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Allaine</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Dan</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Diana</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Exequiel</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Gabriel</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Ishi</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Jakob</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Julianne</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Marielle</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Michael</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Penelope</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Reenalyn</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Sarah</a></li>
-<li><a href="Classmate/Bio_SEB.html"  target="Base">Sebastian</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Sheila</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Kyla</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Georgette</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Amor</a></li>
+<li><a href="Null.html"  target="Base">Aldwin</a></li>
+<li><a href="Null.html"  target="Base">Allaine</a></li>
+<li><a href="Null.html"  target="Base">Dan</a></li>
+<li><a href="Null.html"  target="Base">Diana</a></li>
+<li><a href="Null.html"  target="Base">Exequiel</a></li>
+<li><a href="Null.html"  target="Base">Gabriel</a></li>
+<li><a href="Null.html"  target="Base">Ishi</a></li>
+<li><a href="Null.html"  target="Base">Jakob</a></li>
+<li><a href="Null.html"  target="Base">Julianne</a></li>
+<li><a href="Null.html"  target="Base">Marielle</a></li>
+<li><a href="Null.html"  target="Base">Michael</a></li>
+<li><a href="Null.html"  target="Base">Penelope</a></li>
+<li><a href="Null.html"  target="Base">Reenalyn</a></li>
+<li><a href="Null.html"  target="Base">Sarah</a></li>
+<li><a href="Bio_SEB.html"  target="Base">Sebastian</a></li>
+<li><a href="Null.html"  target="Base">Sheila</a></li>
+<li><a href="Null.html"  target="Base">Kyla</a></li>
+<li><a href="Null.html"  target="Base">Georgette</a></li>
+<li><a href="Null.html"  target="Base">Amor</a></li>
 </ul>
 
 </html>
