--- a/null.html
+++ b/null.html
@@ -1,4 +1,5 @@
 <html>
 <body bgcolor="d1d062">
 <h1 style="text-align:center;font-family:verdana;font-size:90px;">BLANK_SPACE_BABY<h1>
+</body>
 </html>
