--- a/Tab.html
+++ b/Tab.html
@@ -1,5 +1,6 @@
 <html>
 <head><link rel="stylesheet" type="text/css" href="tab_styles.css"></head>
+<body>
 <ul class="nav">
 <li><a href="Null.html"  target="Base">Aldwin</a></li>
 <li><a href="Null.html"  target="Base">Allaine</a></li>
@@ -15,11 +16,12 @@
 <li><a href="Null.html"  target="Base">Penelope</a></li>
 <li><a href="Null.html"  target="Base">Reenalyn</a></li>
 <li><a href="Null.html"  target="Base">Sarah</a></li>
-<li><a href="Bio_SEB.html"  target="Base">Sebastian</a></li>
+<li><a href="Bio_SEB.html" target="Base">Sebastian</a></li>
 <li><a href="Null.html"  target="Base">Sheila</a></li>
 <li><a href="Null.html"  target="Base">Kyla</a></li>
 <li><a href="Null.html"  target="Base">Georgette</a></li>
 <li><a href="Null.html"  target="Base">Amor</a></li>
 </ul>
+</body>
 
 </html>
