--- a/Logo.html
+++ b/Logo.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="logo_styles.css">
+<link rel="stylesheet" type="text/css" href="styles/logo_styles.css">
 </head>
 <body bgcolor="060d1f">
+<div class="img">
 <h1 class="saint">SAINT THERESA </h1>
-<img src="logo1.png" align="middle">
+<img src="graphics/logo1.png" align="middle">
 </body>
 </html>
