--- a/Tab.html
+++ b/Tab.html
@@ -3,10 +3,10 @@
 <ul class="nav">
 <li><a href="Classmate/Null.html"  target="Base">Aldwin</a></li>
 <li><a href="Classmate/Null.html"  target="Base">Allaine</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Dan</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Diana</a></li>
-<li><a href="Classmate/Null.html"  target="Base">Exequiel</a></li>
-<li><a href="Classmate/Bio_gab.html"  target="Base">Gabriel</a></li>
+<li><a href="Null.html"  target="Base">Dan</a></li>
+<li><a href="Null.html"  target="Base">Diana</a></li>
+<li><a href="Null.html"  target="Base">Exequiel</a></li>
+<li><a href="Bio_gab.html"  target="Base">Gabriel</a></li>
 <li><a href="Classmate/Null.html"  target="Base">Ishi</a></li>
 <li><a href="Classmate/Null.html"  target="Base">Jakob</a></li>
 <li><a href="Classmate/Null.html"  target="Base">Julianne</a></li>
@@ -15,7 +15,7 @@
 <li><a href="Classmate/Null.html"  target="Base">Penelope</a></li>
 <li><a href="Classmate/Null.html"  target="Base">Reenalyn</a></li>
 <li><a href="Classmate/Null.html"  target="Base">Sarah</a></li>
-<li><a href="Classmate/Bio_SEB.html"  target="Base">Sebastian</a></li>
+<li><a href="Bio_SEB.html"  target="Base">Sebastian</a></li>
 <li><a href="Classmate/Null.html"  target="Base">Sheila</a></li>
 <li><a href="Classmate/Null.html"  target="Base">Kyla</a></li>
 <li><a href="Classmate/Null.html"  target="Base">Georgette</a></li>
